fixed style of selected item in nightmode fixed double border in inputs

--- a/src/client/components/EditorObject/SearchObjectsAutocomplete-nightmode.less
+++ b/src/client/components/EditorObject/SearchObjectsAutocomplete-nightmode.less
@@ -4,9 +4,22 @@
 .nightmode {
   .ant-select-dropdown-menu-item {
     background-color: @grey-nero;
-    color: @white;
+    color: @white-smoke;
+    border-bottom: @border-width-base @border-style-base @normal-grey;
     &:hover {
-      background-color: @normal-grey;
+      background-color: #32373c;
     }
+  }
+  .obj-search-option.item.ant-select-dropdown-menu-item-active {
+    &:hover {
+      background-color: #32373c;
+    }
+  }
+  .obj-search-option.item.ant-select-dropdown-menu-item-active:not(.ant-select-dropdown-menu-item-disabled) {
+    background-color: #32373c;
+  }
+
+  .ant-select-auto-complete.ant-select .ant-input {
+    border: 0 !important;
   }
 }
